test/typechecker.d/invalid/data2.surc.bad
def enum Boots = { True Uhoh }
